feat(organization_vpc): patched stated_info in OrganizationVpcGetResponse
